[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="bodymatter z3998:nonfiction">
+	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="glossary" epub:type="glossary">
 			<h2 epub:type="title">Glossary of the Principal Scientific Terms Used in the Present Volume</h2>
 			<p>(I am indebted to the kindness of <abbr>Mr.</abbr> <abbr class="name">W. S.</abbr> Dallas for this Glossary, which has been given because several readers have complained to me that some of the terms used were unintelligible to them. <abbr>Mr.</abbr> Dallas has endeavoured to give the explanations of the terms in as popular a form as possible.)</p>
@@ -14,12 +14,12 @@
 			<p><b>Abnormal</b>: Contrary to the general rule.</p>
 			<p><b>Aborted</b>: An organ is said to be aborted, when its development has been arrested at a very early stage.</p>
 			<p><b>Albinism</b>: Albinos are animals in which the usual colouring matters characteristic of the species have not been produced in the skin and its appendages. Albinism is the state of being an albino.</p>
-			<p><b>Algae</b>: A class of plants including the ordinary sea-weeds and the filamentous fresh-water weeds.</p>
+			<p><b>Algae</b>: A class of plants including the ordinary seaweeds and the filamentous freshwater weeds.</p>
 			<p><b>Alternation of Generations</b>: This term is applied to a peculiar mode of reproduction which prevails among many of the lower animals, in which the egg produces a living form quite different from its parent, but from which the parent-form is reproduced by a process of budding, or by the division of the substance of the first product of the egg.</p>
 			<p><b>Ammonites</b>: A group of fossil, spiral, chambered shells, allied to the existing pearly Nautilus, but having the partitions between the chambers waved in complicated patterns at their junction with the outer wall of the shell.</p>
 			<p><b>Analogy</b>: That resemblance of structures which depends upon similarity of function, as in the wings of insects and birds. Such structures are said to be <b>Analogous</b>, and to be <b>Analogues</b> of each other.</p>
 			<p><b>Animalcule</b>: A minute animal: generally applied to those visible only by the microscope.</p>
-			<p><b>Annelids</b>: A class of worms in which the surface of the body exhibits a more or less distinct division into rings or segments, generally provided with appendages for locomotion and with gills. It includes the ordinary marine worms, the earth-worms, and the leeches.</p>
+			<p><b>Annelids</b>: A class of worms in which the surface of the body exhibits a more or less distinct division into rings or segments, generally provided with appendages for locomotion and with gills. It includes the ordinary marine worms, the earthworms, and the leeches.</p>
 			<p><b>Antennae</b>: Jointed organs appended to the head in Insects, Crustacea and Centipedes, and not belonging to the mouth.</p>
 			<p><b>Anthers</b>: The summits of the stamens of flowers, in which the pollen or fertilising dust is produced.</p>
 			<p><b>Aplacentalia</b>, <b>Aplacentata</b> or <b>Aplacental Mammals</b>: See <b>Mammalia</b>.</p>
@@ -27,7 +27,7 @@
 			<p><b>Articulata</b>: A great division of the Animal Kingdom characterised generally by having the surface of the body divided into rings called segments, a greater or less number of which are furnished with jointed legs (such as Insects, Crustaceans and Centipedes).</p>
 			<p><b>Asymmetrical</b>: Having the two sides unlike.</p>
 			<p><b>Atrophied</b>: Arrested in development at a very early stage.</p>
-			<p><b>Balanus</b>: The genus including the common Acorn-shells which live in abundance on the rocks of the sea-coast.</p>
+			<p><b>Balanus</b>: The genus including the common Acorn-shells which live in abundance on the rocks of the seacoast.</p>
 			<p><b>Batrachians</b>: A class of animals allied to the Reptiles, but undergoing a peculiar metamorphosis, in which the young animal is generally aquatic and breathes by gills. (Examples, Frogs, Toads, and Newts.)</p>
 			<p><b>Boulders</b>: Large transported blocks of stone generally embedded in clays or gravels.</p>
 			<p><b>Brachiopoda</b>: A class of marine Mollusca, or soft-bodied animals, furnished with a bivalve shell, attached to submarine objects by a stalk which passes through an aperture in one of the valves, and furnished with fringed arms, by the action of which food is carried to the mouth.</p>
@@ -38,11 +38,11 @@
 			<p><b>Carapace</b>: The shell enveloping the anterior part of the body in Crustaceans generally; applied also to the hard shelly pieces of the Cirripedes.</p>
 			<p><b>Carboniferous</b>: This term is applied to the great formation which includes, among other rocks, the coal-measures. It belongs to the oldest, or Palaeozoic, system of formations.</p>
 			<p><b>Caudal</b>: Of or belonging to the tail.</p>
-			<p><b>Cephalopods</b>: The highest class of the Mollusca, or soft-bodied animals, characterised by having the mouth surrounded by a greater or less number of fleshy arms or tentacles, which, in most living species, are furnished with sucking-cups. (Examples, Cuttle-fish, Nautilus.)</p>
+			<p><b>Cephalopods</b>: The highest class of the Mollusca, or soft-bodied animals, characterised by having the mouth surrounded by a greater or less number of fleshy arms or tentacles, which, in most living species, are furnished with sucking-cups. (Examples, Cuttlefish, Nautilus.)</p>
 			<p><b>Cetacea</b>: An order of Mammalia, including the Whales, Dolphins, <abbr>etc.</abbr>, having the form of the body fish-like, the skin naked, and only the fore limbs developed.</p>
 			<p><b>Chelonia</b>: An order of Reptiles including the Turtles, Tortoises, <abbr class="eoc">etc.</abbr></p>
 			<p><b>Cirripedes</b>: An order of Crustaceans including the Barnacles and Acorn-shells. Their young resemble those of many other Crustaceans in form; but when mature they are always attached to other objects, either directly or by means of a stalk, and their bodies are enclosed by a calcareous shell composed of several pieces, two of which can open to give issue to a bunch of curled, jointed tentacles, which represent the limbs.</p>
-			<p><b>Coccus</b>: The genus of Insects including the Cochineal. In these the male is a minute, winged fly, and the female generally a motionless, berry-like mass.</p>
+			<p><b>Coccus</b>: The genus of Insects including the Cochineal. In these the male is a minute, winged fly, and the female generally a motionless, berrylike mass.</p>
 			<p><b>Cocoon</b>: A case usually of silky material, in which insects are frequently enveloped during the second or resting-stage (pupa) of their existence. The term “cocoon-stage” is here used as equivalent to “pupa-stage.”</p>
 			<p><b>Coelospermous</b>: A term applied to those fruits of the Umbelliferae which have the seed hollowed on the inner face.</p>
 			<p><b>Coleoptera</b>: Beetles, an order of Insects, having a biting mouth and the first pair of wings more or less horny, forming sheaths for the second pair, and usually meeting in a straight line down the middle of the back.</p>
@@ -67,25 +67,25 @@
 			<p><b>Diorite</b>: A peculiar form of Greenstone.</p>
 			<p><b>Dorsal</b>: Of or belonging to the back.</p>
 			<p><b>Edentata</b>: A peculiar order of Quadrupeds, characterised by the absence of at least the middle incisor (front) teeth in both jaws. (Examples, the Sloths and Armadillos.)</p>
-			<p><b>Elytra</b>: The hardened fore-wings of Beetles, serving as sheaths for the membranous hind-wings, which constitute the true organs of flight.</p>
+			<p><b>Elytra</b>: The hardened forewings of Beetles, serving as sheaths for the membranous hind-wings, which constitute the true organs of flight.</p>
 			<p><b>Embryo</b>: The young animal undergoing development within the egg or womb.</p>
 			<p><b>Embryology</b>: The study of the development of the embryo.</p>
 			<p><b>Endemic</b>: Peculiar to a given locality.</p>
 			<p><b>Entomostraca</b>: A division of the class Crustacea, having all the segments of the body usually distinct, gills attached to the feet or organs of the mouth, and the feet fringed with fine hairs. They are generally of small size.</p>
 			<p><b>Eocene</b>: The earliest of the three divisions of the Tertiary epoch of geologists. Rocks of this age contain a small proportion of shells identical with species now living.</p>
-			<p><b>Ephemerous Insects</b>: Insects allied to the May-fly.</p>
+			<p><b>Ephemerous Insects</b>: Insects allied to the Mayfly.</p>
 			<p><b>Fauna</b>: The totality of the animals naturally inhabiting a certain country or region, or which have lived during a given geological period.</p>
 			<p><b>Felidae</b>: The Cat-family.</p>
 			<p><b>Feral</b>: Having become wild from a state of cultivation or domestication.</p>
 			<p><b>Flora</b>: The totality of the plants growing naturally in a country, or during a given geological period.</p>
 			<p><b>Florets</b>: Flowers imperfectly developed in some respects, and collected into a dense spike or head, as in the Grasses, the Dandelion, <abbr class="eoc">etc.</abbr></p>
 			<p><b>Foetal</b>: Of or belonging to the foetus, or embryo in course of development.</p>
-			<p><b>Foraminifera</b>: A class of animals of very low organisation and generally of small size, having a jelly-like body, from the surface of which delicate filaments can be given off and retracted for the prehension of external objects, and having a calcareous or sandy shell, usually divided into chambers and perforated with small apertures.</p>
+			<p><b>Foraminifera</b>: A class of animals of very low organisation and generally of small size, having a jellylike body, from the surface of which delicate filaments can be given off and retracted for the prehension of external objects, and having a calcareous or sandy shell, usually divided into chambers and perforated with small apertures.</p>
 			<p><b>Fossiliferous</b>: Containing fossils.</p>
 			<p><b>Fossorial</b>: Having a faculty of digging. The Fossorial Hymenoptera are a group of Wasp-like Insects, which burrow in sandy soil to make nests for their young.</p>
 			<p><b>Frenum</b> (pl. <b>Frena</b>): A small band or fold of skin.</p>
 			<p><b>Fungi</b> (sing. <b>Fungus</b>): A class of cellular plants, of which Mushrooms, Toadstools, and Moulds, are familiar examples.</p>
-			<p><b>Furcula</b>: The forked bone formed by the union of the collar-bones in many birds, such as the common Fowl.</p>
+			<p><b>Furcula</b>: The forked bone formed by the union of the collarbones in many birds, such as the common Fowl.</p>
 			<p><b>Gallinaceous Birds</b>: An order of birds of which the common Fowl, Turkey, and Pheasant, are well-known examples.</p>
 			<p><b>Gallus</b>: The genus of birds which includes the common Fowl.</p>
 			<p><b>Ganglion</b>: A swelling or knot from which nerves are given off as from a centre.</p>
@@ -98,10 +98,10 @@
 			<p><b>Grallatores</b>: The so-called wading-birds (storks, cranes, snipes, <abbr>etc.</abbr>), which are generally furnished with long legs, bare of feathers above the heel, and have no membranes between the toes.</p>
 			<p><b>Granite</b>: A rock consisting essentially of crystals of felspar and mica in a mass of quartz.</p>
 			<p><b>Habitat</b>: The locality in which a plant or animal naturally lives.</p>
-			<p><b>Hemiptera</b>: An order or sub-order of insects, characterised by the possession of a jointed beak or rostrum, and by having the fore-wings horny in the basal portion and membranous at the extremity, where they cross each other. This group includes the various species of bugs.</p>
+			<p><b>Hemiptera</b>: An order or suborder of insects, characterised by the possession of a jointed beak or rostrum, and by having the forewings horny in the basal portion and membranous at the extremity, where they cross each other. This group includes the various species of bugs.</p>
 			<p><b>Hermaphrodite</b>: Possessing the organs of both sexes.</p>
-			<p><b>Homology</b>: That relation between parts which results from their development from corresponding embryonic parts, either in different animals, as in the case of the arm of man, the fore-leg of a quadruped, and the wing of a bird; or in the same individual, as in the case of the fore and hind legs in quadrupeds, and the segments or rings and their appendages of which the body of a worm, a centipede, <abbr>etc.</abbr>, is composed. The latter is called serial homology. The parts which stand in such a relation to each other are said to be homologous, and one such part or organ is called the homologue of the other. In different plants the parts of the flower are homologous, and in general these parts are regarded as homologous with leaves.</p>
-			<p><b>Homoptera</b>: An order or sub-order of insects having (like the Hemiptera) a jointed beak, but in which the fore-wings are either wholly membranous or wholly leathery, The Cicadae, frog-hoppers, and Aphides, are well-known examples.</p>
+			<p><b>Homology</b>: That relation between parts which results from their development from corresponding embryonic parts, either in different animals, as in the case of the arm of man, the foreleg of a quadruped, and the wing of a bird; or in the same individual, as in the case of the fore and hind legs in quadrupeds, and the segments or rings and their appendages of which the body of a worm, a centipede, <abbr>etc.</abbr>, is composed. The latter is called serial homology. The parts which stand in such a relation to each other are said to be homologous, and one such part or organ is called the homologue of the other. In different plants the parts of the flower are homologous, and in general these parts are regarded as homologous with leaves.</p>
+			<p><b>Homoptera</b>: An order or suborder of insects having (like the Hemiptera) a jointed beak, but in which the forewings are either wholly membranous or wholly leathery, The Cicadae, froghoppers, and Aphides, are well-known examples.</p>
 			<p><b>Hybrid</b>: The offspring of the union of two distinct species.</p>
 			<p><b>Hymenoptera</b>: An order of insects possessing biting jaws and usually four membranous wings in which there are a few veins. Bees and wasps are familiar examples of this group.</p>
 			<p><b>Hypertrophied</b>: Excessively developed.</p>
@@ -130,17 +130,17 @@
 			<p><b>Maxillae</b>: in insects, the second or lower pair of jaws, which are composed of several joints and furnished with peculiar jointed appendages called palpi, or feelers.</p>
 			<p><b>Melanism</b>: The opposite of albinism; an undue development of colouring material in the skin and its appendages.</p>
 			<p><b>Metamorphic Rocks</b>: Sedimentary rocks which have undergone alteration, generally by the action of heat, subsequently to their deposition and consolidation.</p>
-			<p><b>Mollusca</b>: One of the great divisions of the animal kingdom, including those animals which have a soft body, usually furnished with a shell, and in which the nervous ganglia, or centres, present no definite general arrangement. They are generally known under the denomination of “shellfish;” the cuttle-fish, and the common snails, whelks, oysters, mussels, and cockles, may serve as examples of them.</p>
+			<p><b>Mollusca</b>: One of the great divisions of the animal kingdom, including those animals which have a soft body, usually furnished with a shell, and in which the nervous ganglia, or centres, present no definite general arrangement. They are generally known under the denomination of “shellfish;” the cuttlefish, and the common snails, whelks, oysters, mussels, and cockles, may serve as examples of them.</p>
 			<p><b>Monocotyledons</b>, or <b>Monocotyledonous Plants</b>: Plants in which the seed sends up only a single seed-leaf (or cotyledon); characterised by the absence of consecutive layers of wood in the stem (endogenous growth), by the veins of the leaves being generally straight, and by the parts of the flowers being generally in multiples of three. (Examples, grasses, lilies, orchids, palms, <abbr>etc.</abbr>)</p>
 			<p><b>Moraines</b>: The accumulations of fragments of rock brought down by glaciers.</p>
 			<p><b>Morphology</b>: The law of form or structure independent of function.</p>
 			<p><b>Mysis</b>-<b>Stage</b>: A stage in the development of certain crustaceans (prawns), in which they closely resemble the adults of a genus (Mysis) belonging to a slightly lower group.</p>
 			<p><b>Nascent</b>: Commencing development.</p>
 			<p><b>Natatory</b>: Adapted for the purpose of swimming.</p>
-			<p><b>Nauplius</b>-<b>Form</b>: The earliest stage in the development of many Crustacea, especially belonging to the lower groups. In this stage the animal has a short body, with indistinct indications of a division into segments, and three pairs of fringed limbs. This form of the common fresh-water <b>Cyclops</b> was described as a distinct genus under the name of <b>Nauplius</b>.</p>
+			<p><b>Nauplius</b>-<b>Form</b>: The earliest stage in the development of many Crustacea, especially belonging to the lower groups. In this stage the animal has a short body, with indistinct indications of a division into segments, and three pairs of fringed limbs. This form of the common freshwater <b>Cyclops</b> was described as a distinct genus under the name of <b>Nauplius</b>.</p>
 			<p><b>Neuration</b>: The arrangement of the veins or nervures in the wings of insects.</p>
 			<p><b>Neuters</b>: Imperfectly developed females of certain social insects (such as ants and bees), which perform all the labours of the community. Hence, they are also called <b>Workers</b>.</p>
-			<p><b>Nictitating Membrane</b>: A semi-transparent membrane, which can be drawn across the eye in birds and reptiles, either to moderate the effects of a strong light or to sweep particles of dust, <abbr>etc.</abbr>, from the surface of the eye.</p>
+			<p><b>Nictitating Membrane</b>: A semitransparent membrane, which can be drawn across the eye in birds and reptiles, either to moderate the effects of a strong light or to sweep particles of dust, <abbr>etc.</abbr>, from the surface of the eye.</p>
 			<p><b>Ocelli</b>: The simple eyes or stemmata of insects, usually situated on the crown of the head between the great compound eyes.</p>
 			<p><b>Oesophagus</b>: The gullet.</p>
 			<p><b>Oolitic</b>: A great series of secondary rocks, so called from the texture of some of its members, which appear to be made up of a mass of small <b>Egg</b>-<b>Like</b> calcareous bodies.</p>
@@ -208,7 +208,7 @@
 			<p><b>Specialisation</b>: The setting apart of a particular organ for the performance of a particular function.</p>
 			<p><b>Spinal Cord</b>: The central portion of the nervous system in the Vertebrata, which descends from the brain through the arches of the vertebrae, and gives off nearly all the nerves to the various organs of the body.</p>
 			<p><b>Stamens</b>: The male organs of flowering plants, standing in a circle within the petals. They usually consist of a filament and an anther, the anther being the essential part in which the pollen, or fecundating dust, is formed.</p>
-			<p><b>Sternum</b>: The breast-bone.</p>
+			<p><b>Sternum</b>: The breastbone.</p>
 			<p><b>Stigma</b>: The apical portion of the pistil in flowering plants.</p>
 			<p><b>Stipules</b>: Small leafy organs placed at the base of the footstalks of the leaves in many plants.</p>
 			<p><b>Style</b>: The middle portion of the perfect pistil, which rises like a column from the ovary and supports the stigma at its summit.</p>
