--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -312,7 +312,7 @@
 							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Geographical Distribution⁠—Continued</a>
 							<ol>
 								<li>
-									<a href="text/chapter-13.xhtml#chapter-13-1">Fresh-Water Productions</a>
+									<a href="text/chapter-13.xhtml#chapter-13-1">Freshwater Productions</a>
 								</li>
 								<li>
 									<a href="text/chapter-13.xhtml#chapter-13-2">On the Inhabitants of Oceanic Islands</a>
@@ -392,7 +392,7 @@
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitle">Halftitle</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:nonfiction">The Origin of Species</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">The Origin of Species</a>
 				</li>
 				<li>
 					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
