--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -357,7 +357,10 @@
 					</ol>
 				</li>
 				<li>
-				<a href="text/glossary.xhtml">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
+					<a href="text/glossary.xhtml">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml">Endnotes</a>
@@ -396,6 +399,9 @@
 				</li>
 				<li>
 					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter rearnotes">Endnotes</a>
