--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			and on digital scans available at the<br/>
 			<a href="https://catalog.hathitrust.org/Record/100424049">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">The sick monkey</i>,<br/>
+			<i epub:type="se:name.visual-art.painting">The Sick Monkey</i>,<br/>
 			a painting completed in 1870 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edwin_Landseer">Edwin Landseer</a>.<br/>
 			The cover and title pages feature the<br/>
