Added some missed taxonomy tags

--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -239,7 +239,7 @@
 				<dt>Malacostraca</dt>
 				<dd>The higher division of the Crustacea, including the ordinary crabs, lobsters, shrimps, <abbr>etc.</abbr>, together with the woodlice and sand-hoppers.</dd>
 				<dt>Mammalia</dt>
-				<dd>The highest class of animals, including the ordinary hairy quadrupeds, the whales and man, and characterised by the production of living young which are nourished after birth by milk from the teats (<b>Mammae</b>, <b>Mammary Glands</b>) of the mother. A striking difference in embryonic development has led to the division of this class into two great groups; in one of these, when the embryo has attained a certain stage, a vascular connection, called the <b>Placenta</b>, is formed between the embryo and the mother; in the other this is wanting, and the young are produced in a very incomplete state. The former, including the greater part of the class, are called <b>Placental Mammals</b>; the latter, or <b>Aplacental Mammals</b>, include the Marsupials and Monotremes (<b>Ornithorhynchus</b>).</dd>
+				<dd>The highest class of animals, including the ordinary hairy quadrupeds, the whales and man, and characterised by the production of living young which are nourished after birth by milk from the teats (<b>Mammae</b>, <b>Mammary Glands</b>) of the mother. A striking difference in embryonic development has led to the division of this class into two great groups; in one of these, when the embryo has attained a certain stage, a vascular connection, called the <b>Placenta</b>, is formed between the embryo and the mother; in the other this is wanting, and the young are produced in a very incomplete state. The former, including the greater part of the class, are called <b>Placental Mammals</b>; the latter, or <b>Aplacental Mammals</b>, include the Marsupials and Monotremes (<i epub:type="z3998:taxonomy">Ornithorhynchus</i>).</dd>
 				<dt>Mammiferous</dt>
 				<dd>Having mammae or teats (see <b>Mammalia</b>).</dd>
 				<dt>Mandibles</dt>
@@ -261,7 +261,7 @@
 				<dt>Morphology</dt>
 				<dd>The law of form or structure independent of function.</dd>
 				<dt>Mysis</dt>
-				<dd>-<b>Stage</b>: A stage in the development of certain crustaceans (prawns), in which they closely resemble the adults of a genus (Mysis) belonging to a slightly lower group.</dd>
+				<dd>-<b>Stage</b>: A stage in the development of certain crustaceans (prawns), in which they closely resemble the adults of a genus (<i epub:type="z3998:taxonomy">Mysis</i>) belonging to a slightly lower group.</dd>
 				<dt>Nascent</dt>
 				<dd>Commencing development.</dd>
 				<dt>Natatory</dt>
