--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">List of Illustrations</h2>
 				<ol>
 					<li>
-						<a href="../text/chapter-4.xhtml#illustration-1">Diagram showing descent of varieties of species in a genus.</a>
+						<a href="chapter-4.xhtml#illustration-1">Diagram showing descent of varieties of species in a genus.</a>
 					</li>
 				</ol>
 			</nav>
