--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1999 by<br/>
-			<span class="name">Sue Asscher</span>, and <span class="name">David Widger</span><br/>
+			<b class="name">Sue Asscher</b>, and <b class="name">David Widger</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2009">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
@@ -29,17 +29,14 @@
 			a painting completed in 1870 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edwin_Landseer">Edwin Landseer</a>.<br/>
 			The cover and title pages feature the<br/>
-			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
+			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
-			<p>This is the <span class="revision-number">6th</span> edition of this ebook.<br/>
-			This edition was released on<br/>
-			<span class="revision-date">January 20, 2019, 5:52 <abbr class="time eoc">p.m.</abbr></span><br/>
-			The first edition was released on<br/>
-			<span class="release-date">January 15, 2019, 4:52 <abbr class="time eoc">a.m.</abbr></span><br/>
+			<p>The first edition of this ebook was released on<br/>
+			<b>January 15, 2019, 4:52 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a class="raw-url" href="https://standardebooks.org/ebooks/charles-darwin/the-origin-of-species">standardebooks.org/ebooks/charles-darwin/the-origin-of-species</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a class="raw-url" href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<a href="https://standardebooks.org/ebooks/charles-darwin/the-origin-of-species">standardebooks.org/ebooks/charles-darwin/the-origin-of-species</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
