--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -392,10 +392,10 @@
 					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitle">Halftitle</a>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">The Origin of Species</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Origin of Species</a>
 				</li>
 				<li>
 					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
