--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -309,7 +309,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Geographical Distribution⁠—Continued</a>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Geographical Distribution—Continued</a>
 							<ol>
 								<li>
 									<a href="text/chapter-13.xhtml#chapter-13-1">Freshwater Productions</a>
@@ -329,7 +329,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Mutual Affinities of Organic Beings: Morphology⁠—Embryology⁠—Rudimentary Organs⁠—Classification</a>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Mutual Affinities of Organic Beings: Morphology—Embryology—Rudimentary Organs—Classification</a>
 							<ol>
 								<li>
 									<a href="text/chapter-14.xhtml#chapter-14-1">Analogical Resemblances</a>
