--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -581,7 +581,7 @@
 					<dfn>Homoptera</dfn>
 				</dt>
 				<dd>
-					<p>An order or suborder of insects having (like the Hemiptera) a jointed beak, but in which the forewings are either wholly membranous or wholly leathery, The Cicadae, froghoppers, and Aphides, are well-known examples.</p>
+					<p>An order or suborder of insects having (like the Hemiptera) a jointed beak, but in which the forewings are either wholly membranous or wholly leathery. The Cicadae, froghoppers, and Aphides, are well-known examples.</p>
 				</dd>
 				<dt>
 					<dfn>Hybrid</dfn>
@@ -920,7 +920,7 @@
 					<dfn>Papilionaceae</dfn>
 				</dt>
 				<dd>
-					<p>An order of plants (see <b>Leguminosae</b>), The flowers of these plants are called <b>Papilionaceous</b>, or butterfly-like, from the fancied resemblance of the expanded superior petals to the wings of a butterfly.</p>
+					<p>An order of plants (see <b>Leguminosae</b>). The flowers of these plants are called <b>Papilionaceous</b>, or butterfly-like, from the fancied resemblance of the expanded superior petals to the wings of a butterfly.</p>
 				</dd>
 				<dt>
 					<dfn>Parasite</dfn>
