Tweak footer CSS

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -10,21 +10,15 @@
 			<h2 epub:type="title">Epigraphs</h2>
 			<blockquote>
 				<p>“But with regard to the material world, we can at least go so far as this⁠—we can perceive that events are brought about not by insulated interpositions of Divine power, exerted in each particular case, but by the establishment of general laws.”</p>
-				<footer>
-					<p>—Whewell: <i epub:type="se:name.publication.book">Bridgewater Treatise</i>.</p>
-				</footer>
+				<cite>—Whewell: <i epub:type="se:name.publication.book">Bridgewater Treatise</i>.</cite>
 			</blockquote>
 			<blockquote>
 				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, <abbr class="initialism">i.e.</abbr>, to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
-				<footer>
-					<p>—Butler: <i epub:type="se:name.publication.book">Analogy of Revealed Religion</i>.</p>
-				</footer>
+				<cite>—Butler: <i epub:type="se:name.publication.book">Analogy of Revealed Religion</i>.</cite>
 			</blockquote>
 			<blockquote>
 				<p>“To conclude, therefore, let no man out of a weak conceit of sobriety, or an ill-applied moderation, think or maintain, that a man can search too far or be too well studied in the book of God’s word, or in the book of God’s works; divinity or philosophy; but rather let men endeavour an endless progress or proficience in both.”</p>
-				<footer>
-					<p>—Bacon: <i epub:type="se:name.publication.book">Advancement of Learning</i>.</p>
-				</footer>
+				<cite>—Bacon: <i epub:type="se:name.publication.book">Advancement of Learning</i>.</cite>
 			</blockquote>
 		</section>
 	</body>
