--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,7 +23,7 @@
 					<a href="text/introduction.xhtml">Introduction</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Origin of Species by Means of Natural Selection</a>
+					<a href="text/halftitlepage.xhtml">The Origin of Species by Means of Natural Selection</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Variation Under Domestication</a>
@@ -392,7 +392,7 @@
 					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">The Origin of Species</a>
