--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -1115,7 +1115,7 @@
 					<dfn>Range</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>The extent of country over which a plant or animal is naturally spread. <b>Range</b> IN <b>Time</b> expresses the distribution of a species or group through the fossiliferous beds of the earth’s crust.</p>
+					<p>The extent of country over which a plant or animal is naturally spread. <b>Range in Time</b> expresses the distribution of a species or group through the fossiliferous beds of the earth’s crust.</p>
 				</dd>
 				<dt id="retina" epub:type="glossterm">
 					<dfn>Retina</dfn>
