--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -728,7 +728,7 @@
 					<dfn>Mandibles</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>in insects, the first or uppermost pair of jaws, which are generally solid, horny, biting organs. In birds the term is applied to both jaws with their horny coverings. In quadrupeds the mandible is properly the lower jaw.</p>
+					<p>In insects, the first or uppermost pair of jaws, which are generally solid, horny, biting organs. In birds the term is applied to both jaws with their horny coverings. In quadrupeds the mandible is properly the lower jaw.</p>
 				</dd>
 				<dt id="marsupials" epub:type="glossterm">
 					<dfn>Marsupials</dfn>
@@ -740,7 +740,7 @@
 					<dfn>Maxillae</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>in insects, the second or lower pair of jaws, which are composed of several joints and furnished with peculiar jointed appendages called palpi, or feelers.</p>
+					<p>In insects, the second or lower pair of jaws, which are composed of several joints and furnished with peculiar jointed appendages called palpi, or feelers.</p>
 				</dd>
 				<dt id="melanism" epub:type="glossterm">
 					<dfn>Melanism</dfn>
