--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -473,13 +473,13 @@
 					<dfn>Frenum</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(pl. <b>Frena</b>): A small band or fold of skin.</p>
+					<p>(<abbr>pl.</abbr> <b>Frena</b>): A small band or fold of skin.</p>
 				</dd>
 				<dt id="fungi" epub:type="glossterm">
 					<dfn>Fungi</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(sing. <b>Fungus</b>): A class of cellular plants, of which Mushrooms, Toadstools, and Moulds, are familiar examples.</p>
+					<p>(<abbr>sing.</abbr> <b>Fungus</b>): A class of cellular plants, of which Mushrooms, Toadstools, and Moulds, are familiar examples.</p>
 				</dd>
 				<dt id="furcula" epub:type="glossterm">
 					<dfn>Furcula</dfn>
@@ -662,7 +662,7 @@
 					<dfn>Larva</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(pl. <b>Larvae</b>): The first condition of an insect at its issuing from the egg, when it is usually in the form of a grub, caterpillar, or maggot.</p>
+					<p>(<abbr>pl.</abbr> <b>Larvae</b>): The first condition of an insect at its issuing from the egg, when it is usually in the form of a grub, caterpillar, or maggot.</p>
 				</dd>
 				<dt id="larynx" epub:type="glossterm">
 					<dfn>Larynx</dfn>
@@ -884,7 +884,7 @@
 					<dfn>Ovary</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(In plants): The lower part of the pistil or female organ of the flower, containing the ovules or incipient seeds; by growth after the other organs of the flower have fallen, it usually becomes converted into the fruit.</p>
+					<p>(in plants): The lower part of the pistil or female organ of the flower, containing the ovules or incipient seeds; by growth after the other organs of the flower have fallen, it usually becomes converted into the fruit.</p>
 				</dd>
 				<dt id="ovigerous" epub:type="glossterm">
 					<dfn>Ovigerous</dfn>
@@ -1097,7 +1097,7 @@
 					<dfn>Pupa</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(pl. <b>Pupae</b>): The second stage in the development of an insect, from which it emerges in the perfect (winged) reproductive form. In most insects the <b>Pupal Stage</b> is passed in perfect repose. The <b>Chrysalis</b> is the pupal state of butterflies.</p>
+					<p>(<abbr>pl.</abbr> <b>Pupae</b>): The second stage in the development of an insect, from which it emerges in the perfect (winged) reproductive form. In most insects the <b>Pupal Stage</b> is passed in perfect repose. The <b>Chrysalis</b> is the pupal state of butterflies.</p>
 				</dd>
 				<dt id="radicle" epub:type="glossterm">
 					<dfn>Radicle</dfn>
@@ -1277,7 +1277,7 @@
 					<dfn>Tarsus</dfn>
 				</dt>
 				<dd epub:type="glossdef">
-					<p>(pl. <b>Tarsi</b>): The jointed feet of articulate animals, such as insects.</p>
+					<p>(<abbr>pl.</abbr> <b>Tarsi</b>): The jointed feet of articulate animals, such as insects.</p>
 				</dd>
 				<dt id="teleostean-fishes" epub:type="glossterm">
 					<dfn>Teleostean Fishes</dfn>
