Fix up S-K-M to correctly refer to text
This involves removing things that don’t seem to be in the text at all, fixing pluralisms etc where appropriate, and fixing a few spelling mistakes.

--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -46,7 +46,7 @@
 				<dd epub:type="glossdef">
 					<p>A class of plants including the ordinary seaweeds and the filamentous freshwater weeds.</p>
 				</dd>
-				<dt id="alternation-of-generations" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Alternation of Generations</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -88,10 +88,10 @@
 				<dd epub:type="glossdef">
 					<p>The summits of the stamens of flowers, in which the pollen or fertilising dust is produced.</p>
 				</dd>
-				<dt id="aplacentalia" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Aplacentalia</dfn>
 				</dt>
-				<dt id="aplacentata" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Aplacentata</dfn>
 				</dt>
 				<dt id="aplacental-mammals" epub:type="glossterm">
@@ -277,7 +277,7 @@
 				<dd epub:type="glossdef">
 					<p>The normal coincidence of one phenomenon, character, <abbr>etc.</abbr>, with another.</p>
 				</dd>
-				<dt id="corymb" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Corymb</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -322,7 +322,7 @@
 				<dt id="devonian-system" epub:type="glossterm">
 					<dfn>Devonian System</dfn>
 				</dt>
-				<dt id="devonian-formation" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Devonian Formation</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -337,8 +337,8 @@
 				<dd epub:type="glossdef">
 					<p>A class of plants characterised by having two seed-leaves, by the formation of new wood between the bark and the old wood (exogenous growth) and by the reticulation of the veins of the leaves. The parts of the flowers are generally in multiples of five.</p>
 				</dd>
-				<dt id="differentation" epub:type="glossterm">
-					<dfn>Differentation</dfn>
+				<dt id="differentiation" epub:type="glossterm">
+					<dfn>Differentiation</dfn>
 				</dt>
 				<dd epub:type="glossdef">
 					<p>The separation or discrimination of parts or organs which in simpler forms of life are more or less united.</p>
@@ -361,7 +361,7 @@
 				<dd epub:type="glossdef">
 					<p>A peculiar form of Greenstone.</p>
 				</dd>
-				<dt id="dorsal" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Dorsal</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -469,7 +469,7 @@
 				<dd epub:type="glossdef">
 					<p>Having a faculty of digging. The Fossorial Hymenoptera are a group of Wasp-like Insects, which burrow in sandy soil to make nests for their young.</p>
 				</dd>
-				<dt id="frenum" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Frenum</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -700,7 +700,7 @@
 				<dd epub:type="glossdef">
 					<p>Inhabiting the seashore.</p>
 				</dd>
-				<dt id="loess" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Loess</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -763,7 +763,7 @@
 				<dt id="monocotyledons" epub:type="glossterm">
 					<dfn>Monocotyledons</dfn>
 				</dt>
-				<dt id="monocotyledonous-plants" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Monocotyledonous Plants</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -985,7 +985,7 @@
 				<dd epub:type="glossdef">
 					<p>The female organs of a flower, which occupy a position in the centre of the other floral organs. The pistil is generally divisible into the ovary or germen, the style and the stigma.</p>
 				</dd>
-				<dt id="placentalia" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Placentalia, Placentata</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -1033,7 +1033,7 @@
 				<dd epub:type="glossdef">
 					<p>(flowers): Flowers having many stamens.</p>
 				</dd>
-				<dt id="polygamous-plants" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Polygamous Plants</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -1219,7 +1219,7 @@
 				<dd epub:type="glossdef">
 					<p>The setting apart of a particular organ for the performance of a particular function.</p>
 				</dd>
-				<dt id="spinal-cord" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Spinal Cord</dfn>
 				</dt>
 				<dd epub:type="glossdef">
@@ -1363,7 +1363,7 @@
 				<dd epub:type="glossdef">
 					<p>The highest division of the animal kingdom, so called from the presence in most cases of a backbone composed of numerous joints or <b>Vertebrae</b>, which constitutes the centre of the skeleton and at the same time supports and protects the central parts of the nervous system.</p>
 				</dd>
-				<dt id="whorls" epub:type="glossterm">
+				<dt epub:type="glossterm">
 					<dfn>Whorls</dfn>
 				</dt>
 				<dd epub:type="glossdef">
