--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -13,7 +13,7 @@
 				<cite>—⁠Whewell: <i epub:type="se:name.publication.book">Bridgewater Treatise</i>.</cite>
 			</blockquote>
 			<blockquote>
-				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, <abbr class="initialism">i.e.</abbr>, to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
+				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, <abbr epub:type="z3998:initialism">i.e.</abbr>, to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
 				<cite>—⁠Butler: <i epub:type="se:name.publication.book">Analogy of Revealed Religion</i>.</cite>
 			</blockquote>
 			<blockquote>
