--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,9 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of The Origin of Species, by Charles Darwin" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
+			<h1 epub:type="title">The Origin of Species</h1>
+			<p>By <b epub:type="z3998:personal-name z3998:author">Charles Darwin</b>.</p>
+			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
