--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -377,25 +377,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraphs</a>
-				</li>
-				<li>
-					<a href="text/preamble.xhtml" epub:type="frontmatter preamble">An Historical Sketch of the Progress of Opinion on the Origin of Species, Previously to the Publication of the First Edition of This Work</a>
-				</li>
-				<li>
-					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">The Origin of Species</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">The Origin of Species</a>
 				</li>
 				<li>
 					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
@@ -405,12 +387,6 @@
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
