--- a/src/epub/text/halftitlepage.xhtml
+++ b/src/epub/text/halftitlepage.xhtml
@@ -9,7 +9,7 @@
 		<section id="halftitlepage" epub:type="halftitlepage">
 			<hgroup epub:type="fulltitle">
 				<h2 epub:type="title">The Origin of Species by Means of Natural Selection</h2>
-				<h3 epub:type="subtitle">Or, The Preservation of Favoured Races in the Struggle for Life</h3>
+				<p epub:type="subtitle">Or, The Preservation of Favoured Races in the Struggle for Life</p>
 			</hgroup>
 		</section>
 	</body>
