Add z3998:name-title semantic to some abbreviations

--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="backmatter z3998:non-fiction">
 		<section id="glossary" epub:type="glossary">
 			<h2 epub:type="title">Glossary of the Principal Scientific Terms Used in the Present Volume</h2>
-			<p>(I am indebted to the kindness of <abbr>Mr.</abbr> <abbr epub:type="z3998:given-name">W. S.</abbr> Dallas for this Glossary, which has been given because several readers have complained to me that some of the terms used were unintelligible to them. <abbr>Mr.</abbr> Dallas has endeavoured to give the explanations of the terms in as popular a form as possible.)</p>
+			<p>(I am indebted to the kindness of <abbr epub:type="z3998:name-title">Mr.</abbr> <abbr epub:type="z3998:given-name">W. S.</abbr> Dallas for this Glossary, which has been given because several readers have complained to me that some of the terms used were unintelligible to them. <abbr epub:type="z3998:name-title">Mr.</abbr> Dallas has endeavoured to give the explanations of the terms in as popular a form as possible.)</p>
 			<dl>
 				<dt id="aberrant" epub:type="glossterm">
 					<dfn>Aberrant</dfn>
